--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Showcase</title>
+    <title>Project View</title>
     <style>
         * {
             margin: 0;
@@ -392,7 +392,7 @@
 </head>
 <body class="dark-theme">
     <div class="header">
-        <div class="logo">Project Showcase</div>
+        <div class="logo">Project View</div>
         <div style="display: flex; align-items: center;">
             <div class="theme-toggle">
                 <span>🌞</span>
