--- a/index.html
+++ b/index.html
@@ -1211,13 +1211,13 @@
                 </div>
                 <div class="footer-section">
                     <h3 data-en="Connect" data-fa="ارتباط">Connect</h3>
-                    <a href="https://github.com/mehrankadirian" target="_blank">Mehran's GitHub</a>
+                    <a href="https://github.com/mehranqadirian" target="_blank">Mehran's GitHub</a>
                     <a href="https://github.com/naseridev" target="_blank">Nima's GitHub</a>
                 </div>
             </div>
 
             <div class="watermark">
-                <span class="watermark-letter" onclick="window.open('https://github.com/mehrankadirian', '_blank')">
+                <span class="watermark-letter" onclick="window.open('https://github.com/mehranqadirian', '_blank')">
                     M
                     <span class="watermark-tooltip">Mehran</span>
                 </span>
@@ -1263,10 +1263,10 @@
                 title: 'E-Commerce Platform',
                 description: 'A full-featured e-commerce platform with payment integration, shopping cart, and admin dashboard. Built with modern technologies and best practices for scalability and performance.',
                 type: 'web',
-                author: 'Mehran Kadirian',
+                author: 'Mehran Ghadirian',
                 date: '2025-03-15',
                 languages: ['php', 'javascript', 'html'],
-                github: 'https://github.com/mehrankadirian/ecommerce'
+                github: 'https://github.com/mehranqadirian/ecommerce'
             },
             {
                 id: 2,
@@ -1283,10 +1283,10 @@
                 title: 'AI Image Generator',
                 description: 'Machine learning model that generates realistic images from text descriptions using GANs. Supports multiple styles and high-resolution output.',
                 type: 'ai',
-                author: 'Mehran Kadirian',
+                author: 'Mehran Ghadirian',
                 date: '2025-01-10',
                 languages: ['python'],
-                github: 'https://github.com/mehrankadirian/ai-image-gen'
+                github: 'https://github.com/mehranqadirian/ai-image-gen'
             },
             {
                 id: 4,
@@ -1303,10 +1303,10 @@
                 title: 'REST API Framework',
                 description: 'Lightweight and fast REST API framework with built-in authentication, rate limiting, and documentation generation.',
                 type: 'backend',
-                author: 'Mehran Kadirian',
+                author: 'Mehran Ghadirian',
                 date: '2025-01-25',
                 languages: ['go', 'typescript'],
-                github: 'https://github.com/mehrankadirian/api-framework'
+                github: 'https://github.com/mehranqadirian/api-framework'
             },
             {
                 id: 6,
@@ -1322,9 +1322,9 @@
 
         const sampleUsers = [
             {
-                name: 'Mehran Kadirian',
+                name: 'Mehran Ghadirian',
                 bio: 'Full-stack developer passionate about creating elegant solutions to complex problems. Specializing in web development and AI/ML.',
-                github: 'https://github.com/mehrankadirian',
+                github: 'https://github.com/mehranqadirian',
                 email: 'mehran@example.com',
                 location: 'Iran'
             },
