--- a/index.html
+++ b/index.html
@@ -1260,77 +1260,37 @@
         const sampleProjects = [
             {
                 id: 1,
-                title: 'E-Commerce Platform',
-                description: 'A full-featured e-commerce platform with payment integration, shopping cart, and admin dashboard. Built with modern technologies and best practices for scalability and performance.',
-                type: 'web',
+                title: 'Uprix Assistant',
+                description: 'This software helps you organize, search, and run your installed programs quickly with a clean and animated UI.',
+                type: 'desktop',
                 author: 'Mehran Ghadirian',
                 date: '2025-03-15',
-                languages: ['php', 'javascript', 'html'],
-                github: 'https://github.com/mehranqadirian/ecommerce'
+                languages: ['csharp', 'cpp'],
+                github: 'https://github.com/MehranQadirian/Uprix-Application'
             },
             {
                 id: 2,
-                title: 'Task Manager App',
-                description: 'Desktop application for managing tasks with drag-and-drop interface and notifications. Features include priority management, deadlines, and team collaboration.',
-                type: 'desktop',
-                author: 'Nima Naseri',
+                title: 'DWD Downloader Tools',
+                description: 'DWD is a powerful, feature-rich download manager for Linux, written in Python. It supports downloading regular files (e.g., MP3s) and YouTube videos with a sleek, colorful interface, advanced features, and unmatched flexibility. Whether you\'re downloading a single file or managing a queue of downloads, DWD has you covered!',
+                type: 'other',
+                author: 'Mehran Ghadirian',
                 date: '2025-02-20',
-                languages: ['csharp'],
-                github: 'https://github.com/naseridev/taskmanager'
-            },
-            {
-                id: 3,
-                title: 'AI Image Generator',
-                description: 'Machine learning model that generates realistic images from text descriptions using GANs. Supports multiple styles and high-resolution output.',
-                type: 'ai',
-                author: 'Mehran Ghadirian',
-                date: '2025-01-10',
                 languages: ['python'],
-                github: 'https://github.com/mehranqadirian/ai-image-gen'
-            },
-            {
-                id: 4,
-                title: 'Mobile Fitness Tracker',
-                description: 'Cross-platform mobile app for tracking workouts, nutrition, and health metrics. Includes social features and achievement system.',
-                type: 'mobile',
-                author: 'Nima Naseri',
-                date: '2025-02-05',
-                languages: ['dart', 'kotlin'],
-                github: 'https://github.com/naseridev/fitness-tracker'
-            },
-            {
-                id: 5,
-                title: 'REST API Framework',
-                description: 'Lightweight and fast REST API framework with built-in authentication, rate limiting, and documentation generation.',
-                type: 'backend',
-                author: 'Mehran Ghadirian',
-                date: '2025-01-25',
-                languages: ['go', 'typescript'],
-                github: 'https://github.com/mehranqadirian/api-framework'
-            },
-            {
-                id: 6,
-                title: 'Data Visualization Dashboard',
-                description: 'Interactive dashboard for visualizing complex datasets with real-time updates and customizable charts.',
-                type: 'web',
-                author: 'Nima Naseri',
-                date: '2025-03-01',
-                languages: ['javascript', 'python'],
-                github: 'https://github.com/naseridev/data-viz'
+                github: 'https://github.com/MehranQadirian/dwd-download-manager'
             }
         ];
 
         const sampleUsers = [
             {
                 name: 'Mehran Ghadirian',
-                bio: 'Full-stack developer passionate about creating elegant solutions to complex problems. Specializing in web development and AI/ML.',
+                bio: 'Desktop application developer specializing in .NET and cross-platform technologies.',
                 github: 'https://github.com/mehranqadirian',
-                email: 'mehran@example.com',
+                email: 'mehranghadirian01@gmail.com',
                 location: 'Iran'
             },
             {
                 name: 'Nima Naseri',
-                bio: 'Desktop and mobile application developer specializing in .NET and cross-platform technologies.',
+                bio: 'Full-stack developer passionate about creating elegant solutions to complex problems. Specializing in web development and AI/ML.',
                 github: 'https://github.com/naseridev',
                 email: 'nima@example.com',
                 location: 'Iran'
