--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
                 id: 2,
                 title: 'DWD Downloader Tools',
                 description: 'DWD is a powerful, feature-rich download manager for Linux, written in Python. It supports downloading regular files (e.g., MP3s) and YouTube videos with a sleek, colorful interface, advanced features, and unmatched flexibility. Whether you\'re downloading a single file or managing a queue of downloads, DWD has you covered!',
-                type: 'other',
+                type: 'tool',
                 author: 'Mehran Ghadirian',
                 date: '2025-02-20',
                 languages: ['python'],
