--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,8 @@
     <script>
         // Replace the entire <script> section in your index.html with this:
 
+// Replace the entire <script> section in your index.html with this:
+
 const languageImages = {
     'php': 'https://raw.githubusercontent.com/github/explore/main/topics/php/php.png',
     'csharp': 'https://raw.githubusercontent.com/github/explore/main/topics/csharp/csharp.png',
